[gd_scene load_steps=36 format=3 uid="uid://cdoxpqaqs23g5"]

[ext_resource type="Script" path="res://player/player.gd" id="1_h1erh"]
[ext_resource type="Texture2D" uid="uid://d28s668oy40ck" path="res://player_assets/player.png" id="2_1yhr5"]
[ext_resource type="AudioStream" uid="uid://brfoisv0yik4" path="res://sfx/confirm.wav" id="3_cwc2s"]

[sub_resource type="Animation" id="Animation_jcey1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2i7x1"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1mkiy"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_6kufk"]
resource_name = "idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_5yh8w"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_uvtep"]
resource_name = "run_down"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_5gj66"]
resource_name = "run_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="Animation" id="Animation_63xdn"]
resource_name = "run_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_712dn"]
resource_name = "run_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_31f6y"]
resource_name = "walk_down"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 0, 2]
}

[sub_resource type="Animation" id="Animation_unhoa"]
resource_name = "walk_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_7id3c"]
resource_name = "walk_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_g5rey"]
resource_name = "walk_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 6, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7t7ec"]
_data = {
"RESET": SubResource("Animation_jcey1"),
"idle_down": SubResource("Animation_2i7x1"),
"idle_left": SubResource("Animation_1mkiy"),
"idle_right": SubResource("Animation_6kufk"),
"idle_up": SubResource("Animation_5yh8w"),
"run_down": SubResource("Animation_uvtep"),
"run_left": SubResource("Animation_5gj66"),
"run_right": SubResource("Animation_63xdn"),
"run_up": SubResource("Animation_712dn"),
"walk_down": SubResource("Animation_31f6y"),
"walk_left": SubResource("Animation_unhoa"),
"walk_right": SubResource("Animation_7id3c"),
"walk_up": SubResource("Animation_g5rey")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3yp0i"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3a4vd"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ql88x"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bns5v"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_aa8ta"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3yp0i")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_3a4vd")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ql88x")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_bns5v")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bmmb3"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sxje8"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t2w65"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nk23j"]
animation = &"run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4m8aj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bmmb3")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_sxje8")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_t2w65")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_nk23j")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t432l"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t0rqv"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n15dy"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xuj4y"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7nju0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_t432l")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_t0rqv")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_n15dy")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_xuj4y")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fbbf3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e33py"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hvbwy"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_aa8ta")
states/idle/position = Vector2(200, 217)
states/run/node = SubResource("AnimationNodeBlendSpace2D_4m8aj")
states/run/position = Vector2(366, 217)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_7nju0")
states/walk/position = Vector2(366, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_fbbf3"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_e33py")]
graph_offset = Vector2(-252, 3)

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_h1erh")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_1yhr5")
hframes = 12
vframes = 2

[node name="collsion_polygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-1, -1, -1, 1, 1, 1, 1, -1)

[node name="ray_cast" type="RayCast2D" parent="."]

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7t7ec")
}

[node name="anim_tree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7t7ec")
}
tree_root = SubResource("AnimationNodeStateMachine_hvbwy")
anim_player = NodePath("../anim_player")
parameters/idle/blend_position = Vector2(0, 0)
parameters/run/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(0, 0)

[node name="on_touched" type="Area2D" parent="."]

[node name="hitbox" type="CollisionPolygon2D" parent="on_touched"]
position = Vector2(0, -3)
polygon = PackedVector2Array(-4, 11, 4, 11, 4, 16, -4, 16)

[node name="camera" type="Camera2D" parent="."]
process_mode = 3

[node name="on_entered" type="Area2D" parent="."]

[node name="hitbox" type="CollisionPolygon2D" parent="on_entered"]
polygon = PackedVector2Array(-3, -2, -3, 2, 3, 2, 3, -2)

[node name="sfx_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cwc2s")

[connection signal="area_entered" from="on_touched" to="." method="_on_on_touched_area_entered"]
[connection signal="area_exited" from="on_touched" to="." method="_on_on_touched_area_exited"]
[connection signal="area_entered" from="on_entered" to="." method="_on_on_entered_area_entered"]
